--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -61,7 +61,17 @@
 
 .app-logo {
   width: 25px;
-    height: 25px;
-    margin: 0 .2em;
-    vertical-align: text-top;
+  height: 25px;
+  margin: 0 0.2em;
+  vertical-align: text-top;
+}
+
+.search {
+  position: relative;
+}
+.search__search-icon {
+  position: absolute;
+  top: 57%;
+  left: 1em;
+  transform: translate(-50%, -50%);
 }
